<resources>
    <string name="app_name">JustDoIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="date_time"><![CDATA[Date&Time]]></string>
    <string name="name">Name</string>
    <string name="task_name">Task name</string>
    <string name="daily">Daily</string>
</resources>